custom scrollbar fix

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,18 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@layer base {
-    
-    ::-webkit-scrollbar-track {
-        @apply bg-gray-100 rounded-full;
-    }
-    
-    ::-webkit-scrollbar {
-        @apply h-2 w-2 bg-transparent;
-    }
-    
-    ::-webkit-scrollbar-thumb {
-        @apply h-2 w-2 bg-gray-300 rounded-full;
-    }
-}
